fixed input validation

--- a/templates/create_movies_form.html
+++ b/templates/create_movies_form.html
@@ -9,11 +9,11 @@
 <form action="/movies" method="POST">
     <div class="form-group mb-2">
         <label for="movieName">Movie Name</label>
-        <input type="text" class="form-control" id="movieName" placeholder="Enter Movie Name">
+        <input type="text" class="form-control" name="movieName" id="movieName" placeholder="Enter Movie Name">
     </div>
     <div class="form-group mb-2">
         <label for="directorName">Director Name</label>
-        <input type="text" class="form-control" id="directorName" placeholder="Enter the Director's Name">
+        <input type="text" class="form-control" name="directorName" id="directorName" placeholder="Enter the Director's Name">
     </div>
     <div class="form-group mb-2">
         <label>Movie Rating</label><br>
