Finished functionality for search by title for rating

--- a/templates/search_movies.html
+++ b/templates/search_movies.html
@@ -6,8 +6,8 @@
 <h1 class="mb-5">Search Movie Ratings</h1>
 <p class="mb-3">Search for a movie rating below</p>
 <!-- TODO: Feature 3 -->
-    <form action="/movies/searched" method="get">
-        <input type="text" name="title" id="title" class="form-control">
+    <form action="/movies/searched" method="post">
+        <input type="text" name="movie" id="movie" class="form-control">
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
