--- a/templates/searched.html
+++ b/templates/searched.html
@@ -1,5 +1,7 @@
 {% extends '_layout.html' %}
 
+{% block title %}Movie Rating App | Movie{% endblock %}
+
 {% block body %}
 {% if movie != '' %}
 <h1 class="title">{{movie.title}}</h1>
