Moved Script to Separate File

--- a/templates/edit_movies_form.html
+++ b/templates/edit_movies_form.html
@@ -29,28 +29,5 @@
         <button type="submit" class="btn btn-primary">Update Movie</button>
     </form>
 </div>
-<script>
-    // Add event listener to each star element to update the rating input value and refresh the star display.
-    document.addEventListener('DOMContentLoaded', (event)=>{
-        let stars = document.querySelectorAll('.star');
-        stars.forEach((star,index) => {
-            star.addEventListener('click', (e) => {
-                document.getElementById('ratingInput').value = star.getAttribute('data-value');
-                updateStars(index+1);
-            });
-        });
-
-    
-    // Update the stars displayed based on the given rating value.
-    function updateStars(rating){
-        stars.forEach((star, index) => {
-            if(index < rating){
-                star.innerHTML = '★';
-            } else {
-                star.innerHTML = '☆';
-            }
-        });
-    }
-    });
-</script>
+<script src ="/static/js/editMovie.js"></script>
 {% endblock %}
